[dependencies]
apdu-core = "0.4.0"
base32 = "0.5.1"
base64 = "0.22.1"
byteorder = "1.5.0"
clap = {version = "4.5.23", features = ["derive"]}
clap-stdin = "0.6.0"
hmac = "0.12.1"
iso7816-tlv = "0.4.4"
lazy_static = "1.5.0"
once_cell = "1.20.2"
openssl = "0.10.70"
ouroboros = "0.18.5"
# serde_json = "1.0.134"
# serde = { version = "1.0", features = ["derive"] }
pcsc = "2.9.0"
regex = "1.11.1"
sha1 = "0.10.6"
sha2 = "0.10.8"

[package]
name = "oath-rs-experiments"
version = "0.1.0"
edition = "2021"
authors = ["Grimmauld <grimmauld@grimmauld.de>"]
description = "experiments with smartcards"
license-file = "LICENSE"
